<resources>
    <string name="app_name">Lens24</string>

    <string name="all_button_next">Next</string>
    <string name="validate">Validate</string>


    <string name="intro_tagline">Easy way to scan and recognize credit or payment card number, holder name and expiration date offline</string>

    <string name="card_details_card_title">This is your screen</string>
    <string name="card_details_subhead">Verify and complete your card information</string>
    <string name="card_details_card_number_field_label">Card number</string>
    <string name="card_details_cardholder_field_label">Cardholder name</string>
    <string name="card_details_expiry_date_field_label">Expiry date</string>

    <string name="validation_error_fill_in_expiry_date">Fill in expiration date</string>
    <string name="validation_error_invalid_expiry_date">Invalid expiration date</string>
    <string name="validation_error_fill_in_card_holder_name">Fill in card holder name</string>
    <string name="validation_error_invalid_card_holder_name">Invalid card holder name</string>
    <string name="validation_error_fill_in_card_number">Fill in card number</string>
    <string name="validation_error_invalid_card_number">Invalid card number</string>
    <string name="scan">Scan card again</string>

    <string name="lens24_hint_position_card_in_frame">Position your card in this frame</string>
    <string name="lens24_button_enter_card_number">Enter card details manually</string>
    <string name="lens24_toggle_flash">Toggle flash</string>
    <string name="lens24_title">Scan card</string>

</resources>
