<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lens24_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:title="@string/card_details_card_title">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="0dp"
            android:background="?selectableItemBackground"
            android:text="@string/validate"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/card_details_subhead" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <demo.widget.CardNumberEditText
                    android:id="@+id/card_number_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/card_details_card_number_field_label"
                    tools:text="1234 5678 9012 3456" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cardholder_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardholder_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/card_details_cardholder_field_label"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textVisiblePassword|textCapCharacters"
                    tools:text="CARDHOLDER NAME" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <demo.widget.CardDateEditText
                    android:id="@+id/expiry_date_field_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/card_details_expiry_date_field_label"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    tools:text="02/22" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/adUnitId">

            </com.google.android.gms.ads.AdView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/scan_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/ripple_button"
        android:text="@string/scan"
        android:textAllCaps="false"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</LinearLayout>